# Dar_RAG

./: .gitignore  RAG_Pipeline_Report.md  requirements.txt  run.sh
data/: golden_dataset.json
rag_setup/: .gitignore  RAG_Pipeline.pptx  README.md  main.py  pyproject.toml
rag_setup/notebooks/: 01_RAG_setup.ipynb
src/: api.py  chunker.py  citations.py  db.py  embedder.py  eval_deepeval.py  eval_deepeval_groq.py  eval_deepeval_synth.py  evaluate.py  generate_goldens.py  generator.py  groq_judge.py  ingest.py  live_eval.py  main.py  parser.py  reranker.py  retriever.py  sync.py  test_alpha.py  test_rag.py  test_retrieval.py  vector_store.py  verify_pipeline.py
