[project]
name = "rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.2.0",
    "ipython>=9.14.0",
    "jupyter>=1.1.1",
    "langchain>=1.3.2",
    "langchain-huggingface>=1.2.2",
    "langchain-text-splitters>=1.1.2",
    "langchain-unstructured>=1.0.1",
    "langchain-weaviate>=0.0.6",
    "notebook>=7.5.6",
    "sentence-transformers>=5.5.1",
    "tiktoken>=0.13.0",
    "unstructured[pdf]>=0.22.31",
    "weaviate-client>=4.21.2",
]
